<resources>
    <string name="app_name">BluetoothTelemetry</string>
    <!-- Menu options  -->
    <string name="action_connect">Connect</string>
    <string name="action_disconnect">Disconnect</string>
    <string name="action_switch_protocol">Switch protocol</string>
    <string name="action_discoverable">Make discoverable</string>
    <string name="action_pick">Pick fields to transmit</string>
    <!-- UI Labels  -->
    <!-- Bluetooth  -->
    <string name = "Paired_devices">Paired devices</string>
    <string name = "Found_devices">Found devices</string>
    <string name = "Scan_for_devices">Scan for devices</string>
    <!-- Main  -->
    <string name = "Known_data_types">Known data types</string>
    <string name = "Selected_data_types">Selected data types</string>
    <string name = "Use_last_config">Use last incoming config</string>
    <string name = "Send_config">Send config</string>

    <!-- UI Messages  -->
    <!-- Bluetooth  -->
    <string name = "Available_devices">Available devices</string>
    <string name = "Already_connected">Already connected to this devices</string>
    <string name = "Invalid_address">Invalid MAC-Address</string>
    <string name = "Connecting_to">Connecting to</string>
    <string name = "Please_wait">Please wait</string>
    <string name = "Reconnecting">Connection lost. Attempting reconnect...</string>
    <string name = "Cancel">Cancel</string>
    <string name = "Finishing_connect">Finishing connection attempt...</string>
    <string name = "Attempt">Attempt</string>
    <string name = "Out_of">Out_of</string>
    <string name = "Next_attempt_in">Next attempt in</string>
    <string name = "Seconds">Seconds</string>
    <string name = "Attempting_reconnect">Attempting to reconnect</string>
    <string name = "Reconnect_number_exceeded">Number of reconnect attempts exceeded</string>
    <string name = "Connected">Connected succesfully</string>
    <string name = "Disconnected">Disconnected succesfully</string>
    <string name = "Connection_failed">Connection_failed</string>
    <!-- Main  -->
    <string name = "Switched_to">Switched protocol to</string>
    <string name = "No_messages">No messages recived in this session</string>
    <string name = "Available_instruments">Available instruments</string>
    <string name = "Pick_fields">Pick fields to transmit</string>
    <string name = "Bluetooth_needed">This app requires Bluetooth to connect to transmitting devices.</string>

    <string name="Invalid_instrument_field">Cannot create instrument from this field.</string>

    <!-- Telemetry field names  -->
    <string name = "Power_source_voltage">Power supply voltage</string>
    <string name = "Motor_voltage">Motor voltage</string>
    <string name = "Motor_current">Motor current</string>
    <string name = "Used_capacity">Used motor capacity</string>
    <string name = "Barometric_height">Barometric height</string>
    <string name = "Vertical_speed">Vertical speed</string>
    <string name = "Pitot_speed">Pitot speed</string>
    <string name = "Height">Height</string>
    <string name = "Distance_pilot">Distance from pilot</string>
    <string name = "Distance_pilot_ground">Ground distance from pilot</string>
    <string name = "Time">Time</string>
    <string name = "Gyro_packet">Gyro packet</string>
    <string name = "Gyro">Gyro</string>
    <string name = "Servo_packet">Servos</string>
    <string name = "Servo">Servo</string>
    <string name = "Function_packet">Functions</string>
    <string name = "Function">Function</string>
    <string name = "Control_data_packet">Control data</string>
    <string name = "Control_data">Control data</string>
    <string name = "Control_ID_packet">Control IDs</string>
    <string name = "Control_ID">Control ID</string>
    <string name = "Servo_bank_current_packet">Servo bank current data</string>
    <string name = "Servo_bank">Servo bank</string>
    <string name = "Multi_switch_channel_data">Multi Switch Channel data</string>
    <string name = "Multi_switch_channel">Multi Switch Channel</string>
    <string name = "Channel_data">Channel data</string>
    <string name = "Channel">Channel</string>
    <string name = "GPS_HiRes">GPS HiRes</string>
    <string name = "Tx_Timestamp">Transmitter Date/time</string>
    <string name = "Rx_Timestamp">Receiver Date/time</string>
    <string name = "LQI_1">LQI (Ch1)</string>
    <string name = "LQI_2">LQI (Tx,Ch2)</string>
    <string name = "RSSI_1">RSSI (Ch1)</string>
    <string name = "RSSI_2">RSSI (Ch2)</string>
    <string name = "Distance_ground">GPS distance from ground</string>
    <string name = "LinkVario_status">Transmitter LinkVario status</string>
    <string name = "GPS">GPS</string>
    <string name = "Longitude">Longitude</string>
    <string name = "Latitude">Latitude</string>
    <string name = "Speed">Speed</string>
    <string name = "Course">Course</string>
    <string name = "Altitude">Altitude</string>
    <string name = "AltitudeRelative">Relative Altitude</string>
    <string name = "Status_byte">Status byte</string>
    <string name = "Status_word">Status word</string>
    <string name = "USB_voltage">USB voltage</string>
    <string name = "Sync_progress">Synchronization progress</string>
    <string name = "Tx_channels_used">Channels used by transmitter</string>
    <string name = "Pultframes">Frames per second</string>
    <string name = "UTC">Time</string>
    <string name = "FracUTC">Milliseconds</string>
    <string name = "Placeholder">Placeholder</string>
    <string name = "Rx">Receiver</string>
    <string name = "Tx">Transmitter</string>
    <string name = "Power_supply">Power supply</string>
    <string name = "Status">Status</string>
    <string name = "Voltage">Voltage</string>
    <string name = "Current">Current</string>
    <string name = "Input_voltage">Input Voltage</string>
    <string name = "Input_current">Input Current</string>
    <string name = "Main_voltage">Main Voltage</string>
    <string name = "Reserve_voltage">Reserve Voltage</string>
    <string name = "Input_temperature">Input Temperature</string>
    <string name = "Cell">Cell</string>
    <string name = "Capacity">Capacity</string>
    <string name = "Temperature">Temperature</string>
    <string name = "Reserved">Reserved</string>
    <string name = "External_sensor">External sensor</string>
    <string name = "Main">Main</string>
    <string name = "Sub">Sub</string>
    <string name = "LinkVario">LinkVario</string>
    <string name = "MUX">MUX-Board</string>
    <string name = "Timer_packet">Timers</string>
    <string name = "Timer">Timer</string>
    <string name = "Last_lap_timer_packet">Last_lap_timers</string>
    <string name = "Last_lap_timer">Last_lap_timer</string>
    <string name = "Angle_of_attack">Angle of attack</string>
    <string name = "Climbrate">Climbrate</string>
    <string name = "Internal_gyro_1">Internal gyro 1 (X)</string>
    <string name = "Internal_gyro_2">Internal gyro 2 (Y)</string>
    <string name = "Internal_gyro_3">Internal gyro 3 (Z)</string>
    <string name = "External_gyro_1">External gyro 1</string>
    <string name = "External_gyro_2">External gyro 1</string>
    <string name = "Acceleration_1">Acceleration 1 (X)</string>
    <string name = "Acceleration_2">Acceleration 2 (Y)</string>
    <string name = "Acceleration_3">Acceleration 3 (Z)</string>
    <string name = "Pitch">Pitch</string>
    <string name = "Roll">Roll</string>
    <string name = "Vario">Vario</string>
    <string name = "Pressure_height">Pressure_height</string>
    <string name = "Height_from_pilot">Height from pilot</string>
    <string name = "Energy">Energy</string>
    <string name = "Altitude_difference_abs">Absolute altitude difference</string>
    <string name = "Altitude_difference_rel">Relative altitude difference</string>
    <string name = "Text_messasge">Text message</string>
    <string name = "Time_sequencer">Time within sequencer</string>
    <string name = "Time_sequencer_packet">Times within sequencers</string>
    <string name = "Flight_mode">Flight mode</string>
    <string name = "Sequence_control_config">Sequence of control configuration</string>
    <string name = "General_progress">General progress</string>
    <string name = "Teacher_student">Teacher-student</string>
    <string name = "Digital_input">Digital input</string>
    <string name = "Digital_output">Digital output</string>
    <string name = "Airspeed">Airspeed</string>
    <string name = "Bearing_pilot">Bearing from pilot</string>
    <string name = "GForce">GForce</string>
    <string name = "Power">Power</string>
    <string name = "PWM">PWM</string>
    <string name = "Fuel">Fuel</string>
    <string name = "Fuel_flow">Fuel_flow</string>
    <string name = "Fuel_quality">Fuel quality</string>
    <string name = "Engine_noise">Engine noise</string>
    <string name = "Battery_voltage">Battery voltage</string>
    <string name = "Total">(Total)</string>
    <string name = "External_voltage">External voltage</string>
    <string name = "Number_servos">Number of servos</string>
    <string name = "Number_controls">Number of controls</string>
    <string name = "Number_functions">Number of functions</string>
    <string name = "Compass_direction">Compass direction</string>
    <string name = "Startup_warning">Startup_warning_status</string>
    <string name = "Bearing_rx">Bearing to Rx</string>
    <string name = "Bearing_rx_compass">Bearing to Rx (Compass)</string>
    <string name = "Sequencer_control">Sequencer_control_bits</string>
    <string name = "Operating_hours">Operating hours</string>
    <string name = "Operating_hours_model">Model_operating_hours</string>
    <string name = "Air_pressire">Air pressure</string>
    <string name = "TxRx">Tx-Rx</string>
    <string name = "RPM">RPM</string>
    <string name = "RPM_Soll">RPM Target</string>
    <string name = "Packet">packet</string>
    <string name = "Board">board</string>


</resources>

